--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["manpat <pat@patsown.com>"]
 
 [dependencies]
 common = { git = "https://github.com/manpat/common-rs.git" }
+# common = { path = "../common" }
