--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["manpat <pat@patsown.com>"]
 [dependencies]
 common = { git = "https://github.com/manpat/common-rs.git" }
 # common = { path = "../common" }
+
+png = "0.10.0"
